--- a/src/ingestao.ipynb
+++ b/src/ingestao.ipynb
@@ -9,7 +9,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "79564685-afa6-4822-86ad-5c2540a696b9",
+     "nuid": "5b2b6516-6aef-4c8e-9810-f2dfa25aa1c3",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -32,27 +32,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "daad10e8-bdba-4371-adc7-4876d7aa974d",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import delta"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
@@ -61,7 +40,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "f0583b1c-da9b-4460-80d3-b4b4c44c0ec2",
+     "nuid": "96210ef1-6082-4adc-997a-06fd79fc047b",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -69,59 +48,6 @@
    },
    "source": [
     "## 1️⃣ Importações e Setup"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "e1bd9192-ac1b-47a7-b74c-0dbc9dd58142",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "spark.catalog.clearCache()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "738eed4f-552c-406f-aaa4-8d7c273c049a",
-     "showTitle": false,
-     "tableResultSettingsMap": {
-      "0": {
-       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{\"IdProduto\":253},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1759522837609}",
-       "filterBlob": null,
-       "queryPlanFiltersBlob": null,
-       "tableResultIndex": 0
-      }
-     },
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Teste: Visualizar arquivos CDC disponíveis\n",
-    "df_test = spark.read.format(\"parquet\").load(f\"/Volumes/raw/upcell/cdc/transacoes/\")\n",
-    "print(f\"Total de registros CDC: {df_test.count()}\")\n",
-    "print(f\"Colunas: {df_test.columns}\")\n",
-    "display(df_test.limit(5))"
    ]
   },
   {
@@ -142,6 +68,7 @@
    },
    "outputs": [],
    "source": [
+    "import delta\n",
     "def table_exists(catalog, database, table):\n",
     "    count = (spark.sql(f\"SHOW TABLES IN `{catalog}`.`{database}`\")\n",
     "               .filter(f\"database = '{database}' AND tableName = '{table}'\")\n",
@@ -169,9 +96,9 @@
    "source": [
     "catalog = \"bronze\"\n",
     "schema = \"upcell\"\n",
-    "tablename = \"transacoes\"\n",
-    "id_field = \"IdTransacao\"\n",
-    "timefield = \"DtAtualizacao\""
+    "tablename = dbutils.widgets.get(\"tablename\")\n",
+    "id_field = dbutils.widgets.get(\"id_field\")\n",
+    "timefield = dbutils.widgets.get(\"timefield\")"
    ]
   },
   {
@@ -183,7 +110,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "ab62865b-cc47-4624-8e4b-43b6a1e80c86",
+     "nuid": "eb589cf4-1c52-4041-b104-01109d2419f7",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -244,7 +171,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "10aedc79-23dd-444e-be0e-1ecb322f9c34",
+     "nuid": "8fbad948-63ab-4244-8c07-231342112e88",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -282,29 +209,55 @@
    },
    "outputs": [],
    "source": [
-    "# Processa CDC: Deduplica e pega apenas o registro mais recente por chave\n",
+    "# Processa CDC: Filtra apenas arquivos novos e deduplica\n",
     "print(\"📥 Carregando dados CDC...\")\n",
     "\n",
+    "# 1. Busca a última atualização já processada na tabela Bronze\n",
+    "last_processed = spark.sql(f\"\"\"\n",
+    "    SELECT COALESCE(MAX(DtAtualizacao), '1900-01-01') as last_dt\n",
+    "    FROM {catalog}.{schema}.{tablename}\n",
+    "\"\"\").collect()[0]['last_dt']\n",
+    "\n",
+    "print(f\"? Última atualização processada: {last_processed}\")\n",
+    "\n",
+    "# 2. Lê TODOS os arquivos CDC (por enquanto)\n",
     "(spark.read\n",
     "    .format(\"parquet\")\n",
     "    .load(f\"/Volumes/raw/upcell/cdc/{tablename}\")\n",
     "    .createOrReplaceTempView(f\"view_{tablename}\"))\n",
     "\n",
-    "# Query para pegar apenas o último registro de cada chave\n",
-    "query = f\"\"\"\n",
+    "# 3. Filtra apenas registros NOVOS (DtAtualizacao > última processada)\n",
+    "query_filter = f\"\"\"\n",
     "    SELECT *  \n",
     "    FROM view_{tablename}\n",
-    "    QUALIFY ROW_NUMBER() OVER(PARTITION BY {id_field} ORDER BY {timefield} DESC) = 1\n",
+    "    WHERE DtAtualizacao > '{last_processed}'\n",
     "\"\"\"\n",
     "\n",
-    "df_cdc_unique = spark.sql(query)\n",
+    "df_cdc_new = spark.sql(query_filter)\n",
+    "total_new_records = df_cdc_new.count()\n",
     "\n",
-    "print(f\"📊 Total de registros CDC únicos: {df_cdc_unique.count():,}\")\n",
-    "print(f\"📋 Operações no CDC:\")\n",
-    "df_cdc_unique.groupBy(\"op\").count().display()\n",
+    "print(f\"📊 Total de registros CDC NOVOS: {total_new_records:,}\")\n",
     "\n",
-    "print(\"\\n🔍 Sample de registros CDC:\")\n",
-    "df_cdc_unique.display()"
+    "if total_new_records == 0:\n",
+    "    print(\"⚠️  Nenhum registro CDC novo encontrado. Pulando merge.\")\n",
+    "    df_cdc_unique = df_cdc_new  # DataFrame vazio\n",
+    "else:\n",
+    "    # 4. Deduplica: Pega apenas o último registro de cada chave (nos dados NOVOS)\n",
+    "    query_dedupe = f\"\"\"\n",
+    "        SELECT *  \n",
+    "        FROM view_{tablename}\n",
+    "        WHERE DtAtualizacao > '{last_processed}'\n",
+    "        QUALIFY ROW_NUMBER() OVER(PARTITION BY {id_field} ORDER BY {timefield} DESC) = 1\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    df_cdc_unique = spark.sql(query_dedupe)\n",
+    "    \n",
+    "    print(f\"📊 Total de registros CDC únicos (após deduplicação): {df_cdc_unique.count():,}\")\n",
+    "    print(f\"📋 Operações no CDC:\")\n",
+    "    df_cdc_unique.groupBy(\"op\").count().display()\n",
+    "    \n",
+    "    print(\"\\n🔍 Sample de registros CDC:\")\n",
+    "    df_cdc_unique.display()"
    ]
   },
   {
@@ -316,7 +269,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "17bf0a7d-e81e-4a28-a4c8-51a624a441d3",
+     "nuid": "2f5da95f-6268-4ec0-9593-c33bc0e6ed54",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -360,7 +313,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "cc23dfc8-bef3-4816-b7b0-e514a3a3cc3f",
+     "nuid": "83447613-0f6a-4873-bbc4-e930cbc3448c",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -413,38 +366,48 @@
     "# Merge CDC na tabela Delta Bronze\n",
     "print(\"🔄 Executando merge CDC na tabela Bronze...\")\n",
     "\n",
-    "bronze = delta.DeltaTable.forName(spark, f\"{catalog}.{schema}.{tablename}\")\n",
-    "\n",
-    "(bronze.alias(\"b\") \n",
-    "  .merge(df_cdc_unique.alias(\"d\"), f\"b.{id_field} = d.{id_field}\") \n",
-    "  .whenMatchedDelete(condition = \"d.op = 'D'\")           # Delete se op = 'D'\n",
-    "  .whenMatchedUpdateAll(condition = \"d.op = 'U'\")        # Update se op = 'U'\n",
-    "  .whenNotMatchedInsertAll(condition = \"d.op = 'I'\")     # Insert se op = 'I'\n",
-    "  .execute()\n",
-    ")\n",
-    "\n",
-    "print(\"✅ Merge CDC executado com sucesso!\")\n",
-    "\n",
-    "# 📊 DEPOIS DO MERGE: Captura estatísticas atualizadas\n",
-    "print(\"\\n\" + \"=\" * 60)\n",
-    "print(\"📊 ESTATÍSTICAS DEPOIS DO MERGE\")\n",
-    "print(\"=\" * 60)\n",
-    "\n",
-    "# Contagem total depois\n",
-    "count_after = spark.sql(f\"SELECT COUNT(*) as total FROM {catalog}.{schema}.{tablename}\").collect()[0]['total']\n",
-    "print(f\"\\n✅ Total de registros DEPOIS: {count_after:,}\")\n",
-    "\n",
-    "# Detalhes da tabela depois\n",
-    "details_after = spark.sql(f\"DESCRIBE DETAIL {catalog}.{schema}.{tablename}\").select(\"numFiles\", \"sizeInBytes\").collect()[0]\n",
-    "print(f\"📁 Arquivos: {details_after['numFiles']}\")\n",
-    "print(f\"💾 Tamanho: {details_after['sizeInBytes']:,} bytes ({details_after['sizeInBytes'] / (1024*1024):.2f} MB)\")\n",
-    "\n",
-    "# Última atualização depois\n",
-    "last_update_after = spark.sql(f\"\"\"\n",
-    "    SELECT MAX(DtAtualizacao) as ultima_atualizacao \n",
-    "    FROM {catalog}.{schema}.{tablename}\n",
-    "\"\"\").collect()[0]['ultima_atualizacao']\n",
-    "print(f\"🕐 Última atualização: {last_update_after}\")\n",
+    "# Verifica se há dados novos para processar\n",
+    "if df_cdc_unique.count() == 0:\n",
+    "    print(\"⏭️  Nenhum dado CDC novo. Merge não executado.\")\n",
+    "    \n",
+    "    # Define variáveis para comparação (sem mudanças)\n",
+    "    count_after = count_before\n",
+    "    details_after = details_before\n",
+    "    last_update_after = last_update_before\n",
+    "    \n",
+    "else:\n",
+    "    bronze = delta.DeltaTable.forName(spark, f\"{catalog}.{schema}.{tablename}\")\n",
+    "    \n",
+    "    (bronze.alias(\"b\") \n",
+    "      .merge(df_cdc_unique.alias(\"d\"), f\"b.{id_field} = d.{id_field}\") \n",
+    "      .whenMatchedDelete(condition = \"d.op = 'D'\")           # Delete se op = 'D'\n",
+    "      .whenMatchedUpdateAll(condition = \"d.op = 'U'\")        # Update se op = 'U'\n",
+    "      .whenNotMatchedInsertAll(condition = \"d.op = 'I'\")     # Insert se op = 'I'\n",
+    "      .execute()\n",
+    "    )\n",
+    "    \n",
+    "    print(\"✅ Merge CDC executado com sucesso!\")\n",
+    "    \n",
+    "    # 📊 DEPOIS DO MERGE: Captura estatísticas atualizadas\n",
+    "    print(\"\\n\" + \"=\" * 60)\n",
+    "    print(\"📊 ESTATÍSTICAS DEPOIS DO MERGE\")\n",
+    "    print(\"=\" * 60)\n",
+    "    \n",
+    "    # Contagem total depois\n",
+    "    count_after = spark.sql(f\"SELECT COUNT(*) as total FROM {catalog}.{schema}.{tablename}\").collect()[0]['total']\n",
+    "    print(f\"\\n✅ Total de registros DEPOIS: {count_after:,}\")\n",
+    "    \n",
+    "    # Detalhes da tabela depois\n",
+    "    details_after = spark.sql(f\"DESCRIBE DETAIL {catalog}.{schema}.{tablename}\").select(\"numFiles\", \"sizeInBytes\").collect()[0]\n",
+    "    print(f\"📁 Arquivos: {details_after['numFiles']}\")\n",
+    "    print(f\"💾 Tamanho: {details_after['sizeInBytes']:,} bytes ({details_after['sizeInBytes'] / (1024*1024):.2f} MB)\")\n",
+    "    \n",
+    "    # Última atualização depois\n",
+    "    last_update_after = spark.sql(f\"\"\"\n",
+    "        SELECT MAX(DtAtualizacao) as ultima_atualizacao \n",
+    "        FROM {catalog}.{schema}.{tablename}\n",
+    "    \"\"\").collect()[0]['ultima_atualizacao']\n",
+    "    print(f\"🕐 Última atualização: {last_update_after}\")\n",
     "\n",
     "# 🔄 COMPARAÇÃO: Calcula diferenças\n",
     "print(\"\\n\" + \"=\" * 60)\n",
@@ -455,7 +418,7 @@
     "diff_size = details_after['sizeInBytes'] - details_before['sizeInBytes']\n",
     "diff_files = details_after['numFiles'] - details_before['numFiles']\n",
     "\n",
-    "print(f\"\\n📊 Diferença de registros: {diff_records:+,} ({'+' if diff_records >= 0 else ''}{(diff_records/count_before*100):.2f}%)\")\n",
+    "print(f\"\\n📊 Diferença de registros: {diff_records:+,} ({'+' if diff_records >= 0 else ''}{(diff_records/count_before*100 if count_before > 0 else 0):.2f}%)\")\n",
     "print(f\"💾 Diferença de tamanho: {diff_size:+,} bytes ({diff_size / (1024*1024):+.2f} MB)\")\n",
     "print(f\"📁 Diferença de arquivos: {diff_files:+}\")\n",
     "\n",
@@ -471,7 +434,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "fe2ce052-e9dd-43ff-8617-d1af155ccd7b",
+     "nuid": "f69947e7-7b1e-4271-8f50-95f3d18d483b",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -493,7 +456,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "ec6457a3-0ca6-4cff-b085-4881b936c9d8",
+     "nuid": "01b72764-f3c5-448c-94dd-4de3be8fdcc3",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -521,7 +484,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "86cb79af-c533-4e72-bf90-36f55ce16371",
+     "nuid": "d143d8c9-db0a-4553-9e95-a5276761c8f2",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -538,143 +501,6 @@
     "    \"operationMetrics\"\n",
     ").display()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "577ecea5-c1db-4675-80a6-00a41f45b375",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    },
-    "vscode": {
-     "languageId": "sql"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "display(\n",
-    "    spark.sql(\n",
-    "        \"\"\"\n",
-    "        SELECT \n",
-    "            DATE(DtAtualizacao) as data_atualizacao,\n",
-    "            COUNT(*) as total_registros,\n",
-    "            MIN(DtAtualizacao) as primeira_atualizacao,\n",
-    "            MAX(DtAtualizacao) as ultima_atualizacao\n",
-    "        FROM bronze.upcell.transacao_produto\n",
-    "        GROUP BY DATE(DtAtualizacao)\n",
-    "        ORDER BY data_atualizacao DESC\n",
-    "        \"\"\"\n",
-    "    )\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "57499518-ee1b-4d7e-a2fa-aa75f3f35c7c",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "### 🎯 Próximos Passos:\n",
-    "\n",
-    "1. **Executar para outras tabelas**: Altere a variável `tablename` para processar:\n",
-    "   - `clientes`\n",
-    "   - `produtos`\n",
-    "   - `transacoes`\n",
-    "\n",
-    "2. **Agendar execução**: Configure um Job no Databricks para rodar periodicamente\n",
-    "\n",
-    "3. **Otimizar tabela**: Execute `OPTIMIZE` e `VACUUM` periodicamente:\n",
-    "   ```sql\n",
-    "   OPTIMIZE bronze.upcell.transacao_produto;\n",
-    "   VACUUM bronze.upcell.transacao_produto RETAIN 168 HOURS;\n",
-    "   ```\n",
-    "\n",
-    "4. **Monitorar**: Use `DESCRIBE HISTORY` para acompanhar versões"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "a0acd8a4-2272-438f-9fc8-fc60719a69e8",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "## 6️⃣ Validação Final\n",
-    "\n",
-    "Consulta a tabela Bronze para validar os dados."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "1b4226c7-ecd7-4018-8698-b0ca67c3cebd",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "---\n",
-    "\n",
-    "## 📚 Referência: Operações CDC\n",
-    "\n",
-    "| Operação | Código | Descrição | Ação no Merge |\n",
-    "|----------|--------|-----------|---------------|\n",
-    "| **Insert** | `I` | Novo registro | `whenNotMatchedInsertAll()` |\n",
-    "| **Update** | `U` | Registro atualizado | `whenMatchedUpdateAll()` |\n",
-    "| **Delete** | `D` | Registro deletado | `whenMatchedDelete()` |\n",
-    "\n",
-    "### 🔍 Como Funciona o QUALIFY:\n",
-    "\n",
-    "```sql\n",
-    "QUALIFY ROW_NUMBER() OVER(PARTITION BY {id_field} ORDER BY {timefield} DESC) = 1\n",
-    "```\n",
-    "\n",
-    "- **PARTITION BY**: Agrupa por chave primária\n",
-    "- **ORDER BY DESC**: Ordena pelo timestamp (mais recente primeiro)\n",
-    "- **ROW_NUMBER() = 1**: Pega apenas o registro mais recente de cada chave\n",
-    "\n",
-    "### ✅ Checklist de Validação:\n",
-    "\n",
-    "- [ ] Full-load executado com sucesso\n",
-    "- [ ] CDC processado sem erros\n",
-    "- [ ] Merge aplicado corretamente\n",
-    "- [ ] Contagem de registros confere\n",
-    "- [ ] Coluna `DtAtualizacao` presente em todos os registros"
-   ]
   }
  ],
  "metadata": {
@@ -689,7 +515,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 5062531956061245,
+     "commandId": 5195627179372982,
      "dataframes": [
       "_sqldf"
      ]
