"limpeza dos emojis"

--- a/src/bronze/ingestao.ipynb
+++ b/src/bronze/ingestao.ipynb
@@ -16,16 +16,16 @@
     }
    },
    "source": [
-    "# 📥 Pipeline de Ingestão CDC - Upcell\n",
+    "# Pipeline de Ingestão CDC - Upcell\n",
     "\n",
     "Este notebook implementa o pipeline de ingestão de dados CDC (Change Data Capture) do S3 para o Bronze no Databricks.\n",
     "\n",
-    "## 🎯 Objetivo\n",
-    "- **Full-load**: Carga inicial completa das tabelas\n",
-    "- **CDC**: Ingestão incremental com operações Insert, Update e Delete\n",
-    "- **Delta Lake**: Merge atômico na camada Bronze\n",
+    "## Objetivo\n",
+    "- Full-load: Carga inicial completa das tabelas\n",
+    "- CDC: Ingestão incremental com operações Insert, Update e Delete\n",
+    "- Delta Lake: Merge atômico na camada Bronze\n",
     "\n",
-    "## 📋 Requisitos\n",
+    "## Requisitos\n",
     "- Tabelas no S3: `s3://meudatalake-raw/upcell/`\n",
     "- Catálogo: `bronze.upcell`\n",
     "- Coluna de controle: `DtAtualizacao` (presente em todos os arquivos)"
@@ -117,9 +117,7 @@
     }
    },
    "source": [
-    "## 2️⃣ Configuração da Tabela\n",
-    "\n",
-    "Defina a tabela que será processada e os campos de controle."
+    "## 1. Importações e Setup"
    ]
   },
   {
@@ -142,12 +140,11 @@
    "source": [
     "# Carga inicial: Cria tabela Delta a partir do full-load\n",
     "if not table_exists(catalog, schema, tablename):\n",
-    "    print(f\"⚠️  Tabela {catalog}.{schema}.{tablename} NÃO existe. Criando a partir do full-load...\")\n",
+    "    print(f\"Tabela {catalog}.{schema}.{tablename} NÃO existe. Criando a partir do full-load...\")\n",
     "\n",
     "    # Lê full-load (já tem DtAtualizacao!)\n",
     "    df_full = spark.read.format(\"parquet\").load(f\"/Volumes/raw/upcell/full-load/{tablename}\")\n",
-    "    \n",
-    "    print(f\"📊 Total de registros no full-load: {df_full.count():,}\")\n",
+    "    print(f\"Total de registros no full-load: {df_full.count():,}\")\n",
     "\n",
     "    # Cria tabela Delta\n",
     "    (df_full.coalesce(1)\n",
@@ -155,11 +152,9 @@
     "            .format(\"delta\")\n",
     "            .mode(\"overwrite\")\n",
     "            .saveAsTable(f\"{catalog}.{schema}.{tablename}\"))\n",
-    "    \n",
-    "    print(f\"✅ Tabela {catalog}.{schema}.{tablename} criada com sucesso!\")\n",
-    "    \n",
+    "    print(f\"Tabela {catalog}.{schema}.{tablename} criada com sucesso!\")\n",
     "else:\n",
-    "    print(f\"✅ Tabela {catalog}.{schema}.{tablename} já existe. Pular para o CDC merge.\")"
+    "    print(f\"Tabela {catalog}.{schema}.{tablename} já existe. Pular para o CDC merge.\")"
    ]
   },
   {
@@ -178,7 +173,7 @@
     }
    },
    "source": [
-    "## 3️⃣ Full-Load (Carga Inicial)\n",
+    "## 3. Full-Load (Carga Inicial)\n",
     "\n",
     "Se a tabela não existe, cria a partir dos dados de full-load."
    ]
@@ -210,15 +205,11 @@
    "outputs": [],
    "source": [
     "# Processa CDC: Filtra apenas arquivos novos e deduplica\n",
-    "print(\"📥 Carregando dados CDC...\")\n",
-    "\n",
     "# 1. Busca a última atualização já processada na tabela Bronze\n",
     "last_processed = spark.sql(f\"\"\"\n",
     "    SELECT COALESCE(MAX(DtAtualizacao), '1900-01-01') as last_dt\n",
     "    FROM {catalog}.{schema}.{tablename}\n",
     "\"\"\").collect()[0]['last_dt']\n",
-    "\n",
-    "print(f\"? Última atualização processada: {last_processed}\")\n",
     "\n",
     "# 2. Lê TODOS os arquivos CDC (por enquanto)\n",
     "(spark.read\n",
@@ -236,10 +227,7 @@
     "df_cdc_new = spark.sql(query_filter)\n",
     "total_new_records = df_cdc_new.count()\n",
     "\n",
-    "print(f\"📊 Total de registros CDC NOVOS: {total_new_records:,}\")\n",
-    "\n",
     "if total_new_records == 0:\n",
-    "    print(\"⚠️  Nenhum registro CDC novo encontrado. Pulando merge.\")\n",
     "    df_cdc_unique = df_cdc_new  # DataFrame vazio\n",
     "else:\n",
     "    # 4. Deduplica: Pega apenas o último registro de cada chave (nos dados NOVOS)\n",
@@ -249,15 +237,7 @@
     "        WHERE DtAtualizacao > '{last_processed}'\n",
     "        QUALIFY ROW_NUMBER() OVER(PARTITION BY {id_field} ORDER BY {timefield} DESC) = 1\n",
     "    \"\"\"\n",
-    "    \n",
-    "    df_cdc_unique = spark.sql(query_dedupe)\n",
-    "    \n",
-    "    print(f\"📊 Total de registros CDC únicos (após deduplicação): {df_cdc_unique.count():,}\")\n",
-    "    print(f\"📋 Operações no CDC:\")\n",
-    "    df_cdc_unique.groupBy(\"op\").count().display()\n",
-    "    \n",
-    "    print(\"\\n🔍 Sample de registros CDC:\")\n",
-    "    df_cdc_unique.display()"
+    "    df_cdc_unique = spark.sql(query_dedupe)"
    ]
   },
   {
@@ -276,7 +256,7 @@
     }
    },
    "source": [
-    "## 4️⃣ Processamento CDC\n",
+    "## 4. Processamento CDC\n",
     "\n",
     "Carrega arquivos CDC, deduplica e prepara para o merge."
    ]
@@ -321,28 +301,13 @@
    },
    "outputs": [],
    "source": [
-    "# 📊 ANTES DO MERGE: Captura estatísticas atuais\n",
-    "print(\"=\" * 60)\n",
-    "print(\"📊 ESTATÍSTICAS ANTES DO MERGE\")\n",
-    "print(\"=\" * 60)\n",
-    "\n",
-    "# Contagem total antes\n",
+    "# Estatísticas antes do merge\n",
     "count_before = spark.sql(f\"SELECT COUNT(*) as total FROM {catalog}.{schema}.{tablename}\").collect()[0]['total']\n",
-    "print(f\"\\n✅ Total de registros ANTES: {count_before:,}\")\n",
-    "\n",
-    "# Detalhes da tabela antes\n",
     "details_before = spark.sql(f\"DESCRIBE DETAIL {catalog}.{schema}.{tablename}\").select(\"numFiles\", \"sizeInBytes\").collect()[0]\n",
-    "print(f\"📁 Arquivos: {details_before['numFiles']}\")\n",
-    "print(f\"💾 Tamanho: {details_before['sizeInBytes']:,} bytes ({details_before['sizeInBytes'] / (1024*1024):.2f} MB)\")\n",
-    "\n",
-    "# Última atualização antes\n",
     "last_update_before = spark.sql(f\"\"\"\n",
     "    SELECT MAX(DtAtualizacao) as ultima_atualizacao \n",
     "    FROM {catalog}.{schema}.{tablename}\n",
-    "\"\"\").collect()[0]['ultima_atualizacao']\n",
-    "print(f\"🕐 Última atualização: {last_update_before}\")\n",
-    "\n",
-    "print(\"\\n\" + \"=\" * 60)"
+    "\"\"\").collect()[0]['ultima_atualizacao']"
    ]
   },
   {
@@ -364,20 +329,14 @@
    "outputs": [],
    "source": [
     "# Merge CDC na tabela Delta Bronze\n",
-    "print(\"🔄 Executando merge CDC na tabela Bronze...\")\n",
-    "\n",
     "# Verifica se há dados novos para processar\n",
     "if df_cdc_unique.count() == 0:\n",
-    "    print(\"⏭️  Nenhum dado CDC novo. Merge não executado.\")\n",
-    "    \n",
     "    # Define variáveis para comparação (sem mudanças)\n",
     "    count_after = count_before\n",
     "    details_after = details_before\n",
     "    last_update_after = last_update_before\n",
-    "    \n",
     "else:\n",
     "    bronze = delta.DeltaTable.forName(spark, f\"{catalog}.{schema}.{tablename}\")\n",
-    "    \n",
     "    (bronze.alias(\"b\") \n",
     "      .merge(df_cdc_unique.alias(\"d\"), f\"b.{id_field} = d.{id_field}\") \n",
     "      .whenMatchedDelete(condition = \"d.op = 'D'\")           # Delete se op = 'D'\n",
@@ -385,44 +344,17 @@
     "      .whenNotMatchedInsertAll(condition = \"d.op = 'I'\")     # Insert se op = 'I'\n",
     "      .execute()\n",
     "    )\n",
-    "    \n",
-    "    print(\"✅ Merge CDC executado com sucesso!\")\n",
-    "    \n",
-    "    # 📊 DEPOIS DO MERGE: Captura estatísticas atualizadas\n",
-    "    print(\"\\n\" + \"=\" * 60)\n",
-    "    print(\"📊 ESTATÍSTICAS DEPOIS DO MERGE\")\n",
-    "    print(\"=\" * 60)\n",
-    "    \n",
-    "    # Contagem total depois\n",
+    "    # Estatísticas depois do merge\n",
     "    count_after = spark.sql(f\"SELECT COUNT(*) as total FROM {catalog}.{schema}.{tablename}\").collect()[0]['total']\n",
-    "    print(f\"\\n✅ Total de registros DEPOIS: {count_after:,}\")\n",
-    "    \n",
-    "    # Detalhes da tabela depois\n",
     "    details_after = spark.sql(f\"DESCRIBE DETAIL {catalog}.{schema}.{tablename}\").select(\"numFiles\", \"sizeInBytes\").collect()[0]\n",
-    "    print(f\"📁 Arquivos: {details_after['numFiles']}\")\n",
-    "    print(f\"💾 Tamanho: {details_after['sizeInBytes']:,} bytes ({details_after['sizeInBytes'] / (1024*1024):.2f} MB)\")\n",
-    "    \n",
-    "    # Última atualização depois\n",
     "    last_update_after = spark.sql(f\"\"\"\n",
     "        SELECT MAX(DtAtualizacao) as ultima_atualizacao \n",
     "        FROM {catalog}.{schema}.{tablename}\n",
     "    \"\"\").collect()[0]['ultima_atualizacao']\n",
-    "    print(f\"🕐 Última atualização: {last_update_after}\")\n",
-    "\n",
-    "# 🔄 COMPARAÇÃO: Calcula diferenças\n",
-    "print(\"\\n\" + \"=\" * 60)\n",
-    "print(\"🔄 COMPARAÇÃO: ANTES vs DEPOIS\")\n",
-    "print(\"=\" * 60)\n",
-    "\n",
+    "# Comparação antes vs depois\n",
     "diff_records = count_after - count_before\n",
     "diff_size = details_after['sizeInBytes'] - details_before['sizeInBytes']\n",
-    "diff_files = details_after['numFiles'] - details_before['numFiles']\n",
-    "\n",
-    "print(f\"\\n📊 Diferença de registros: {diff_records:+,} ({'+' if diff_records >= 0 else ''}{(diff_records/count_before*100 if count_before > 0 else 0):.2f}%)\")\n",
-    "print(f\"💾 Diferença de tamanho: {diff_size:+,} bytes ({diff_size / (1024*1024):+.2f} MB)\")\n",
-    "print(f\"📁 Diferença de arquivos: {diff_files:+}\")\n",
-    "\n",
-    "print(\"\\n\" + \"=\" * 60)"
+    "diff_files = details_after['numFiles'] - details_before['numFiles']"
    ]
   },
   {
@@ -441,7 +373,7 @@
     }
    },
    "source": [
-    "## 5️⃣ Merge CDC na Tabela Delta\n",
+    "## 5. Merge CDC na Tabela Delta\n",
     "\n",
     "Aplica as operações de Insert, Update e Delete na camada Bronze."
    ]
@@ -466,11 +398,11 @@
    "source": [
     "# Validação 1: Contagem total de registros\n",
     "total = spark.sql(f\"SELECT COUNT(*) as total FROM {catalog}.{schema}.{tablename}\").collect()[0]['total']\n",
-    "print(f\"📊 Total de registros na tabela Bronze: {total:,}\")\n",
+    "print(f\"Total de registros na tabela Bronze: {total:,}\")\n",
     "\n",
     "# Validação 2: Verificar se DtAtualizacao está presente\n",
     "sample = spark.sql(f\"SELECT * FROM {catalog}.{schema}.{tablename} LIMIT 5\")\n",
-    "print(f\"\\n✅ Colunas da tabela: {sample.columns}\")\n",
+    "print(f\"Colunas da tabela: {sample.columns}\")\n",
     "sample.display()"
    ]
   },
@@ -493,7 +425,6 @@
    "outputs": [],
    "source": [
     "# Validação 3: Verificar histórico de versões Delta\n",
-    "print(\"📜 Histórico de versões da tabela Delta:\\n\")\n",
     "spark.sql(f\"DESCRIBE HISTORY {catalog}.{schema}.{tablename}\").select(\n",
     "    \"version\", \n",
     "    \"timestamp\", \n",
