"Initial commit of the ingestion notebook"

--- a/src/bronze/ingestao.ipynb
+++ b/src/bronze/ingestao.ipynb
@@ -140,7 +140,7 @@
    "outputs": [],
    "source": [
     "df_full = spark.read.format(\"parquet\").load(f\"/Volumes/raw/upcell/cdc/{tablename}/\")\n",
-    "schema = df_full.schema\n"
+    "df_schema = df_full.schema"
    ]
   },
   {
