"Initial commit of the ingestion notebook"

--- a/src/bronze/ingestao.ipynb
+++ b/src/bronze/ingestao.ipynb
@@ -2,6 +2,25 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Ingestão CDC via Streaming\n",
+    "\n",
+    "### Modos de Execução\n",
+    "\n",
+    "**Modo Atual: `availableNow=True`**\n",
+    "- Processa todos os dados disponíveis e para automaticamente\n",
+    "- Ideal para execução via Jobs/Pipelines\n",
+    "- Sem custo de cluster ocioso\n",
+    "\n",
+    "**Modo Contínuo (comentado abaixo):**\n",
+    "- Mantém o streaming ativo indefinidamente\n",
+    "- Processa novos arquivos conforme chegam\n",
+    "- Requer cluster sempre ligado"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -47,7 +66,7 @@
     }
    },
    "source": [
-    "## 1️⃣ Importações e Setup"
+    "## 1. Importações e Setup"
    ]
   },
   {
@@ -103,25 +122,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "eb589cf4-1c52-4041-b104-01109d2419f7",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "## 1. Importações e Setup"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -139,8 +139,10 @@
    },
    "outputs": [],
    "source": [
-    "df_full = spark.read.format(\"parquet\").load(f\"/Volumes/raw/upcell/cdc/{tablename}/\")\n",
-    "df_schema = df_full.schema"
+    "# Captura o schema dos arquivos CDC para usar no streaming\n",
+    "df_sample = spark.read.format(\"parquet\").load(f\"/Volumes/raw/upcell/cdc/{tablename}/\")\n",
+    "df_schema = df_sample.schema\n",
+    "print(f\"Schema capturado: {len(df_schema.fields)} colunas\")"
    ]
   },
   {
@@ -190,9 +192,9 @@
     }
    },
    "source": [
-    "## 3. Full-Load (Carga Inicial)\n",
+    "## 2. Configuração e Full-Load\n",
     "\n",
-    "Se a tabela não existe, cria a partir dos dados de full-load."
+    "Define variáveis de configuração e cria a tabela inicial se não existir."
    ]
   },
   {
@@ -214,39 +216,66 @@
    },
    "outputs": [],
    "source": [
-    "bronze = delta.DeltaTable.forName(spark, f\"{catalog}.{schema}.{tablename}\")\n",
-    "\n",
-    "def upsert(df, deltatable):\n",
-    "\n",
-    "    df.createOrReplaceGlobalTempView(f\"view_{tablename}\")\n",
+    "# Função de upsert para processar cada batch do streaming\n",
+    "def upsert(df, batchId):\n",
+    "    print(f\"Processando batch {batchId}...\")\n",
     "    \n",
+    "    # Conta registros no batch\n",
+    "    batch_count = df.count()\n",
+    "    print(f\"  Registros no batch: {batch_count}\")\n",
+    "    \n",
+    "    if batch_count == 0:\n",
+    "        print(\"  Batch vazio, pulando...\")\n",
+    "        return\n",
+    "    \n",
+    "    # Cria view temporária\n",
+    "    df.createOrReplaceTempView(f\"view_{tablename}\")\n",
+    "    \n",
+    "    # Deduplica: pega apenas o último registro de cada chave\n",
     "    query = f\"\"\"\n",
     "    SELECT *  \n",
     "    FROM view_{tablename}\n",
     "    QUALIFY ROW_NUMBER() OVER (PARTITION BY {id_field} ORDER BY {timefield} DESC) = 1    \n",
     "    \"\"\"\n",
     "    df_cdc = spark.sql(query)\n",
-    "        \n",
-    "    (deltatable.alias(\"b\") \n",
+    "    dedup_count = df_cdc.count()\n",
+    "    print(f\"  Após deduplicação: {dedup_count} registros\")\n",
+    "    \n",
+    "    # Conta operações por tipo\n",
+    "    ops = df_cdc.groupBy(\"op\").count().collect()\n",
+    "    for row in ops:\n",
+    "        print(f\"    - {row['op']}: {row['count']}\")\n",
+    "    \n",
+    "    # Aplica merge na tabela Delta\n",
+    "    bronze_table = delta.DeltaTable.forName(spark, f\"{catalog}.{schema}.{tablename}\")\n",
+    "    \n",
+    "    (bronze_table.alias(\"b\") \n",
     "      .merge(df_cdc.alias(\"d\"), f\"b.{id_field} = d.{id_field}\") \n",
-    "      .whenMatchedDelete(condition = \"d.op = 'D'\")           # Delete se op = 'D'\n",
-    "      .whenMatchedUpdateAll(condition = \"d.op = 'U'\")        # Update se op = 'U'\n",
-    "      .whenNotMatchedInsertAll(condition = \"d.op = 'I'\")     # Insert se op = 'I'\n",
+    "      .whenMatchedDelete(condition = \"d.op = 'D'\")\n",
+    "      .whenMatchedUpdateAll(condition = \"d.op = 'U'\")\n",
+    "      .whenNotMatchedInsertAll(condition = \"d.op = 'I'\")\n",
     "      .execute()\n",
     "    )\n",
+    "    \n",
+    "    print(f\"  Batch {batchId} processado com sucesso!\\n\")\n",
     "\n",
-    "df_stram = (spark.readStream\n",
+    "# Configura streaming com Cloud Files (Auto Loader)\n",
+    "df_stream = (spark.readStream\n",
     "                .format(\"cloudFiles\")\n",
     "                .option(\"cloudFiles.format\", \"parquet\")\n",
-    "                .schema(schema)\n",
+    "                .schema(df_schema)\n",
     "                .load(f\"/Volumes/raw/upcell/cdc/{tablename}/\"))\n",
     "\n",
-    "stream = (df_stram.writeStream\n",
-    "                  .option(\"chekpointLocation\", f\"/Volumes/raw/upcell/cdc/{tablename}/_checkpoints/\")\n",
-    "                  .foreachBatch(lambda df, batchId: upsert(df, bronze))                \n",
+    "# Configura writeStream com trigger availableNow (processa e para)\n",
+    "stream = (df_stream.writeStream\n",
+    "                  .trigger(availableNow=True)\n",
+    "                  .option(\"checkpointLocation\", f\"/Volumes/raw/upcell/cdc/{tablename}/_checkpoints/\")\n",
+    "                  .foreachBatch(upsert)\n",
     ")\n",
     "\n",
-    "\n"
+    "# Para modo contínuo, substitua por:\n",
+    "# .trigger(processingTime=\"10 seconds\")  # Processa a cada 10 segundos\n",
+    "# E adicione .awaitTermination() após .start()"
    ]
   },
   {
@@ -267,24 +296,31 @@
    },
    "outputs": [],
    "source": [
-    "start = stream.start()"
+    "# Inicia o streaming\n",
+    "query = stream.start()\n",
+    "\n",
+    "# Aguarda a finalização (com availableNow=True, processa e para automaticamente)\n",
+    "query.awaitTermination()\n",
+    "\n",
+    "# Exibe diagnóstico\n",
+    "print(\"\\n\" + \"=\"*60)\n",
+    "print(\"DIAGNÓSTICO DO STREAMING\")\n",
+    "print(\"=\"*60)\n",
+    "print(f\"Status: {query.status}\")\n",
+    "print(f\"\\nÚltimo progresso:\")\n",
+    "if query.lastProgress:\n",
+    "    print(f\"  - Batch ID: {query.lastProgress.get('batchId', 'N/A')}\")\n",
+    "    print(f\"  - Linhas lidas: {query.lastProgress.get('numInputRows', 0)}\")\n",
+    "    print(f\"  - Duração: {query.lastProgress.get('durationMs', {}).get('triggerExecution', 0)} ms\")\n",
+    "else:\n",
+    "    print(\"  Nenhum batch processado (sem dados novos)\")\n",
+    "\n",
+    "if query.exception():\n",
+    "    print(f\"\\nErro: {query.exception()}\")\n",
+    "else:\n",
+    "    print(\"\\nNenhum erro detectado\")\n",
+    "print(\"=\"*60)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "bb15481e-eaac-4fb5-8bf5-cb5901466e47",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
