--- a/src/bronze/ingestao.ipynb
+++ b/src/bronze/ingestao.ipynb
@@ -2,7 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "228c4835-1944-407a-966f-904ac600439a",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
     "## 4. Ingestão CDC via Streaming\n",
     "\n",
@@ -116,8 +128,8 @@
     "catalog = \"bronze\"\n",
     "schema = \"upcell\"\n",
     "\n",
-    "tablename = \"clientes\"\n",
-    "id_field = \"idcliente\"\n",
+    "tablename = \"produtos\"\n",
+    "id_field = \"IdProduto\"\n",
     "timefield = \"DtAtualizacao\""
    ]
   },
@@ -204,11 +216,10 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
       "byteLimit": 2048000,
-      "implicitDf": true,
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "98bf0438-167c-4336-9de0-7636723e3a7e",
+     "nuid": "1f59ccc3-4e51-4baf-867c-b52ae2725994",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -216,66 +227,7 @@
    },
    "outputs": [],
    "source": [
-    "# Função de upsert para processar cada batch do streaming\n",
-    "def upsert(df, batchId):\n",
-    "    print(f\"Processando batch {batchId}...\")\n",
-    "    \n",
-    "    # Conta registros no batch\n",
-    "    batch_count = df.count()\n",
-    "    print(f\"  Registros no batch: {batch_count}\")\n",
-    "    \n",
-    "    if batch_count == 0:\n",
-    "        print(\"  Batch vazio, pulando...\")\n",
-    "        return\n",
-    "    \n",
-    "    # Cria view temporária\n",
-    "    df.createOrReplaceTempView(f\"view_{tablename}\")\n",
-    "    \n",
-    "    # Deduplica: pega apenas o último registro de cada chave\n",
-    "    query = f\"\"\"\n",
-    "    SELECT *  \n",
-    "    FROM view_{tablename}\n",
-    "    QUALIFY ROW_NUMBER() OVER (PARTITION BY {id_field} ORDER BY {timefield} DESC) = 1    \n",
-    "    \"\"\"\n",
-    "    df_cdc = spark.sql(query)\n",
-    "    dedup_count = df_cdc.count()\n",
-    "    print(f\"  Após deduplicação: {dedup_count} registros\")\n",
-    "    \n",
-    "    # Conta operações por tipo\n",
-    "    ops = df_cdc.groupBy(\"op\").count().collect()\n",
-    "    for row in ops:\n",
-    "        print(f\"    - {row['op']}: {row['count']}\")\n",
-    "    \n",
-    "    # Aplica merge na tabela Delta\n",
-    "    bronze_table = delta.DeltaTable.forName(spark, f\"{catalog}.{schema}.{tablename}\")\n",
-    "    \n",
-    "    (bronze_table.alias(\"b\") \n",
-    "      .merge(df_cdc.alias(\"d\"), f\"b.{id_field} = d.{id_field}\") \n",
-    "      .whenMatchedDelete(condition = \"d.op = 'D'\")\n",
-    "      .whenMatchedUpdateAll(condition = \"d.op = 'U'\")\n",
-    "      .whenNotMatchedInsertAll(condition = \"d.op = 'I'\")\n",
-    "      .execute()\n",
-    "    )\n",
-    "    \n",
-    "    print(f\"  Batch {batchId} processado com sucesso!\\n\")\n",
-    "\n",
-    "# Configura streaming com Cloud Files (Auto Loader)\n",
-    "df_stream = (spark.readStream\n",
-    "                .format(\"cloudFiles\")\n",
-    "                .option(\"cloudFiles.format\", \"parquet\")\n",
-    "                .schema(df_schema)\n",
-    "                .load(f\"/Volumes/raw/upcell/cdc/{tablename}/\"))\n",
-    "\n",
-    "# Configura writeStream com trigger availableNow (processa e para)\n",
-    "stream = (df_stream.writeStream\n",
-    "                  .trigger(availableNow=True)\n",
-    "                  .option(\"checkpointLocation\", f\"/Volumes/raw/upcell/cdc/{tablename}/_checkpoints/\")\n",
-    "                  .foreachBatch(upsert)\n",
-    ")\n",
-    "\n",
-    "# Para modo contínuo, substitua por:\n",
-    "# .trigger(processingTime=\"10 seconds\")  # Processa a cada 10 segundos\n",
-    "# E adicione .awaitTermination() após .start()"
+    "bronze = delta.DeltaTable.forName(spark, f\"{catalog}.{schema}.{tablename}\")"
    ]
   },
   {
@@ -288,7 +240,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "544d987f-880e-486f-994b-90511c6b475b",
+     "nuid": "c2ee8c1c-b061-4a34-ac8b-a1b6285fb49b",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -296,36 +248,70 @@
    },
    "outputs": [],
    "source": [
-    "# Inicia o streaming\n",
-    "query = stream.start()\n",
+    "def upsert(df, deltatable):\n",
+    "    df.createOrReplaceGlobalTempView(f\"view_{tablename}\")\n",
     "\n",
-    "# Aguarda a finalização (com availableNow=True, processa e para automaticamente)\n",
-    "query.awaitTermination()\n",
+    "    query = f\"\"\"\n",
+    "    SELECT *\n",
+    "    FROM global_temp.view_{tablename}\n",
+    "    QUALIFY ROW_NUMBER() OVER (PARTITION BY {id_field} ORDER BY {timefield} DESC) = 1\n",
+    "    \"\"\"\n",
     "\n",
-    "# Exibe diagnóstico\n",
-    "print(\"\\n\" + \"=\"*60)\n",
-    "print(\"DIAGNÓSTICO DO STREAMING\")\n",
-    "print(\"=\"*60)\n",
-    "print(f\"Status: {query.status}\")\n",
-    "print(f\"\\nÚltimo progresso:\")\n",
-    "if query.lastProgress:\n",
-    "    print(f\"  - Batch ID: {query.lastProgress.get('batchId', 'N/A')}\")\n",
-    "    print(f\"  - Linhas lidas: {query.lastProgress.get('numInputRows', 0)}\")\n",
-    "    print(f\"  - Duração: {query.lastProgress.get('durationMs', {}).get('triggerExecution', 0)} ms\")\n",
-    "else:\n",
-    "    print(\"  Nenhum batch processado (sem dados novos)\")\n",
+    "    df_cdc = spark.sql(query)\n",
     "\n",
-    "if query.exception():\n",
-    "    print(f\"\\nErro: {query.exception()}\")\n",
-    "else:\n",
-    "    print(\"\\nNenhum erro detectado\")\n",
-    "print(\"=\"*60)"
+    "    (deltatable.alias(\"b\")\n",
+    "        .merge(df_cdc.alias(\"d\"), f\"b.{id_field} = d.{id_field}\")\n",
+    "        .whenMatchedDelete(condition = \"d.OP = 'D'\")\n",
+    "        .whenMatchedUpdateAll(condition = \"d.OP = 'U'\")\n",
+    "        .whenNotMatchedInsertAll(condition = \"d.OP = 'I' OR d.OP = 'U'\")\n",
+    "        .execute()\n",
+    "    )\n",
+    "\n",
+    "df_stream = (spark.readStream\n",
+    "    .format(\"cloudFiles\")\n",
+    "    .option(\"cloudFiles.format\", \"parquet\")\n",
+    "    .schema(df_schema)\n",
+    "    .load(f\"/Volumes/raw/upcell/cdc/{tablename}/\")\n",
+    ")\n",
+    "\n",
+    "stream = (df_stream.writeStream\n",
+    "    .option(\"checkpointLocation\", f\"/Volumes/raw/upcell/cdc/{tablename}_checkpoint/\")\n",
+    "    .foreachBatch(lambda df, batchID: upsert(df, bronze))\n",
+    "    \n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "37f6adbe-2651-4f5c-b6df-59ddc70047b5",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "stream = stream.start()"
    ]
   }
  ],
  "metadata": {
   "application/vnd.databricks.v1+notebook": {
-   "computePreferences": null,
+   "computePreferences": {
+    "hardware": {
+     "accelerator": null,
+     "gpuPoolId": null,
+     "memory": null
+    }
+   },
    "dashboards": [],
    "environmentMetadata": {
     "base_environment": "",
