--- a/src/bronze/ingestao.ipynb
+++ b/src/bronze/ingestao.ipynb
@@ -277,6 +277,7 @@
     "stream = (df_stream.writeStream\n",
     "    .option(\"checkpointLocation\", f\"/Volumes/raw/upcell/cdc/{tablename}_checkpoint/\")\n",
     "    .foreachBatch(lambda df, batchID: upsert(df, bronze))\n",
+    "    .trigger(availableNow=True)\n",
     "    \n",
     ")\n"
    ]
@@ -291,7 +292,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "37f6adbe-2651-4f5c-b6df-59ddc70047b5",
+     "nuid": "9f6ff601-6578-4e09-99a4-adc065e51c15",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -299,7 +300,7 @@
    },
    "outputs": [],
    "source": [
-    "stream = stream.start()"
+    "stream.start()"
    ]
   }
  ],
